# Ignarus

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: IndexBuffer.h  Renderer.h  Shader.h  VertexBuffer.h  VertexBufferLayout.h  shadeutil.h
res/shaders/: hello_triangle.glsl
src/: IndexBuffer.cpp  Renderer.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp  main.cpp  shadeutil.cpp
